# OpenGL-SpaceSim

./: .gitignore  CMakeLists.txt  main.cpp
include/: EntityManager.h  ISystem.h  System.h  SystemManager.h
include/Components/: Camera.h  CameraComponent.h  DirectionalLight.h  Drawable.h  Material.h  MeshComponent.h  Orbit.h  PointLight.h  ShipControl.h  Skybox.h  Transform.h  Velocity.h
include/Core/: Registry.h  UpdateContext.h
include/Rendering/: Mesh.h  RenderBackend.h  Shader.h
include/Systems/: CameraFollowSystem.h  CameraSystem.h  InputSystem.h  IntegrateSystem.h  OribitSystem.h  PointLightSystem.h  RenderSystem.h
include/Utils/: ImageLoader.h
shaders/: basic.frag  planet.frag  planet.vert  skyboox.frag  skybox.frag  skybox.vert  sun.frag  sun.vert
src/: EntityManager.cpp  EntityManager.h  RenderSystem.h  Shader.cpp  main.cpp
src/Rendering/: Mesh.cpp
src/Systems/: CameraFollowSystem.cpp  InputSystem.cpp  IntegrateSystem.cpp  PointLightSystem.cpp  RenderSystem.cpp
